// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render active Checkbox component 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0:hover {
  cursor: pointer;
}

.c4 {
  width: 32px;
  height: 24px;
  fill: none;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 55px;
  height: 55px;
  background: #FFFFFF;
  border-radius: 15px;
  border: 4px solid #0047FF;
}

.c2 .c3 {
  visibility: visible;
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="c2"
  >
    <img
      className="c3 c4"
      src="test-file-stub"
    />
  </div>
</label>
`;

exports[`Checkbox component should render inactive Checkbox component 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0:hover {
  cursor: pointer;
}

.c4 {
  width: 32px;
  height: 24px;
  fill: none;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 .c3 {
  visibility: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 55px;
  height: 55px;
  background: #FFFFFF;
  border-radius: 15px;
  border: 4px solid #0047FF;
}

.c2 .c3 {
  visibility: hidden;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="c2"
  >
    <img
      className="c3 c4"
      src="test-file-stub"
    />
  </div>
</label>
`;
